src/objects/Shop__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporation__c</fullName>
        <label>Corporation</label>
        <referenceTo>Corporation__c</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Director of the shop.</description>
        <label>Director</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(&quot;https://pbs.twimg.com/profile_images/1045580248467886080/_uwwJdr3.jpg&quot;, &quot;some&quot;,20,20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue__c</fullName>
        <label>Monthly Revenue</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shop_Website__c</fullName>
        <defaultValue>&quot;https://www.google.by/&quot;</defaultValue>
        <label>Shop Website</label>
        <type>Url</type>
    </fields>
    <label>Shop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Rich_Web_Shop</fullName>
        <columns>NAME</columns>
        <columns>Monthly_Revenue__c</columns>
        <columns>Annual_Revenue__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>Rich Web Shop</label>
    </listViews>
    <nameField>
        <label>Shop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shops</pluralLabel>
    <recordTypes>
        <fullName>Supermarket</fullName>
        <active>true</active>
        <label>Supermarket</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_shop</fullName>
        <active>true</active>
        <label>Web shop</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Is_Director_Field_Empty</fullName>
        <active>true</active>
        <description>Director field can not be empty</description>
        <errorConditionFormula>ISBLANK(Director__c)</errorConditionFormula>
        <errorMessage>Director field can not be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_Revenue_Negative</fullName>
        <active>true</active>
        <errorConditionFormula>Monthly_Revenue__c &lt;0</errorConditionFormula>
        <errorMessage>Monthly revenue should be more than 0</errorMessage>
    </validationRules>
</CustomObject>